--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
   <link href="./output.css" rel="stylesheet">
+   <title>My Portfolio</title>
+  
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline">
+    <header class="">
+        <nav>
+            <ul>
+              <li>Home</li>
+              <li>About me</li>
+              <li>Portfolio</li>
+              <li>Contact Me</li>
+        </ul>
+        </nav>
+
+        
+    </header>
+     <h1 class="text-3xl font-bold underline"></h1>
     Hello world!
   </h1>
+  
 </body>
 </html>
